--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-query": "^3.39.3",
+    "react-responsive-carousel": "^3.2.23",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
